# predict-irrigation-kaggle-solution

./: .gitignore  README.md  pyproject.toml  question.txt  requirements.txt
docs/: app.js  index.html  styles.css
docs/data/: latest_run.json
notebooks/: kaggle_solution_walkthrough.ipynb
scripts/: audit_validation.py  export_dashboard_data.py  external_nina_blend.py  run_multiseed_ensemble.py  run_pipeline.py
src/fraud_risk_early_warning/: __init__.py  advanced_features.py  config.py  pipeline.py
